fix: improve user list styling on mobile

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -2529,6 +2529,11 @@ html {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
